feat: single instance ipc manager